Fix [Nuclio] Layout breaks on window resize with closed test pane(#1164)

--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -194,7 +194,6 @@
 
                 .ui-layout-container {
                     overflow: hidden;
-                    transition: padding-left 0.2s ease-in-out;
                 }
 
                 .ui-splitbar {
